se agrego cambios a la estructura html y se probo la vista y vamos por buen camino se registro la ruta para presupuesto de proveedor

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -115,8 +115,8 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item text-wrap" href="{{ url_for('pdcmod.pedidos_index') }}">Registrar pedido de compras</a>
-                        <a class="collapse-item" href="">Proceso 2</a>
-                        <a class="collapse-item" href="">Proceso 3</a>
+                        <a class="collapse-item text-wrap" href="{{ url_for('pdpmod.presupuestos_index') }}">Registrar presupuesto de proveedor</a>
+                        <a class="collapse-item text-wrap" href="">Proceso 3</a>
                         <a class="collapse-item" href="">Proceso 4</a>
                     </div>
                 </div>
