--- a/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
+++ b/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
@@ -12,58 +12,60 @@ Formulario Presupuesto Proveedor
         </div>
         <div class="card-body">
             <div class="row">
-
-                <div class="col col-md-6">
-
+                <!-- Columna izquierda -->
+                <div class="col-md-6 d-flex flex-column">
                   <!-- Combo empleados -->
                   <div class="form-group">
                     <label for="cbo_empleado">Empleados:</label>
                     <select id="cbo_empleado" class="custom-select">
                       <option selected>Empleados</option>
                       {% for item in empleados %}
-                        <option value="{{ item['id_empleado'] }}">
-                          {{ item['empleado'] }} - CEDULA: {{ item['ci'] }}
-                        </option>
-                        {% endfor %}
+                      <option value="{{ item['id_empleado'] }}">
+                        {{ item['empleado'] }} - CI: {{ item['ci'] }}
+                      </option>
+                      {% endfor %}
                     </select>
                   </div>
-                  <!--  -->
-
-                  <!-- Combo pedido  -->
-                   <!-- 
-                  <div class="col col-md-6">
-                      <div class="form-group">
-                        <label for="cbo_pedido">Nro pedido:</label>
-                        <select id="cbo_pedido" class="custom-select">
-                          <option value="">Nro pedido:</option>
-                        </select>
-                      </div>
-                  </div>
-                   -->
-                  
-                  <!--  -->
-
+              
                   <!-- Combo sucursales -->
                   <div class="form-group">
                     <label for="cbo_sucursal">Sucursales:</label>
                     <select id="cbo_sucursal" class="custom-select">
                       <option value="">Sucursales</option>
                       {% for item in sucursales %}
-                        <option value="{{ item['id'] }}">
-                          {{ item['descripcion'] }}
-                        </option>
+                      <option value="{{ item['id'] }}">
+                        {{ item['descripcion'] }}
+                      </option>
                       {% endfor %}
                     </select>
                   </div>
-
-                  <!--  -->
+              
+                  <!-- Fecha de Pedido -->
                   <div class="form-group">
                     <label for="txt_fecha_de_pedido">Fecha de Pedido:</label>
                     <input type="date" class="form-control" id="txt_fecha_de_pedido" />
                   </div>
                 </div>
-                
-            </div>
+              
+                <!-- Columna derecha -->
+                <div class="col-md-6 d-flex flex-column">
+                  <!-- Combo pedido -->
+                  <div class="form-group">
+                    <label for="cbo_pedido">Nro pedido:</label>
+                    <select id="cbo_pedido" class="custom-select">
+                      <option value="">Nro pedido:</option>
+                    </select>
+                  </div>
+              
+                  <!-- Combo proveedor -->
+                  <div class="form-group">
+                    <label for="cbo_proveedor">Proveedores</label>
+                    <select id="cbo_proveedor" class="custom-select">
+                      <option value="">Proveedores</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
 
             <!-- Combo producto -->
             <div class="form-group row mt-3">
