--- a/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
+++ b/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
@@ -62,13 +62,19 @@ Formulario Presupuesto Proveedor
                     <label for="cbo_proveedor">Proveedores</label>
                     <select id="cbo_proveedor" class="custom-select">
                       <option value="">Proveedores</option>
+                      {% for item in proveedores %}
+                      <option value="{{ item['id_proveedor'] }}">
+                      Ruc  {{ item['ruc'] }} - R Social: {{ item['razon_social'] }}
+                      </option>
+                      {% endfor %}
                     </select>
                   </div>
                 </div>
               </div>
 
             <!-- Combo producto -->
-            <div class="form-group row mt-3">
+             
+            <!-- <div class="form-group row mt-3">
               <label for="cbo_producto" class="col-md-2 col-form-label">Producto:</label>
               <div class="col-md-6">
                   <select id="cbo_producto" class="custom-select">
@@ -84,15 +90,16 @@ Formulario Presupuesto Proveedor
                 <button type="button" class="btn btn-primary" id="btn_agregar_producto">Agregar</button>
               </div>
             </div>
-            <!-- -->
+            
 
-            <!-- Cantidad de producto -->
+             "Cantidad de producto" 
             <div class="form-group row mt-3">
               <label for="txt_cantidad" class="col-md-2 col-form-label">Cantidad:</label>
               <div class="col-md-2">
                 <input type="number" class="form-control mb-2 mr-md-2" placeholder="Cantidad" id="txt_cantidad" min="0">
               </div>
-            </div>
+            </div> -->
+            
             <!--  -->
 
             <hr>
