hubo modificaciones por un error habia dos métodos con el mismo nombre y se agrego un input numérico a la tabla de presupuestos en el archivo presupuestos-agregar

--- a/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
+++ b/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
@@ -116,6 +116,7 @@ Formulario Presupuesto Proveedor
                             <th>Producto</th>
                             <th>descripción</th>
                             <th>Cantidad</th>
+                            <th>Precio</th>
                         </tr>
                     </thead>
                     <tbody id="productos-table-body">
@@ -154,7 +155,9 @@ Formulario Presupuesto Proveedor
                                 <td>${producto.id_producto}</td>
                                 <td>${producto.nombre}</td>
                                 <td>${producto.cantidad}</td>
-                                
+                                <td>
+                                <input type="number" min="0" placeholder="Precio">
+                            </td>
                             </tr>
                         `;
                         tableBody.innerHTML += row;
