ya guarda el presupuesto de proveedor en la base de datos con el precio que se inserta en la tabla del detalle osea los productos ya se guardan con el precio insertado desde el frontend con cambios en la api por que estaba mal definido el detalle en el precio y al estar mal definido siempre iba a ser 0 lo que se estaba guardando en las pruebas

--- a/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
+++ b/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
@@ -132,7 +132,7 @@ Formulario Presupuesto Proveedor
                       <input type="number" class="form-control cantidad-producto" value="${producto.cantidad}" min="1">
                   </td>
                   <td>
-                      <input type="number" class="form-control precio-producto" id="precio_unitario" placeholder="Precio" min="0">
+                      <input type="number" class="form-control precio-producto" placeholder="Precio" min="0">
                   </td>
                 </tr>`;
               tableBody.innerHTML += row;
