--- a/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
+++ b/app/rutas/gestionar_compras/resgitrar_presupuesto_proveedor/templates/presupuestos-agregar.html
@@ -101,8 +101,6 @@ Formulario Presupuesto Proveedor
                 </div>
             </div>
             
-            
-       </div>
             <hr>
             <div class="row">
                 <div class="col col-md-12">
@@ -132,6 +130,18 @@ Formulario Presupuesto Proveedor
 
 {% block js %}
 <script>
+  // Validación de las fechas
+  function validarFechas() {
+    const fechaPedido = new Date(document.getElementById('txt_fecha_de_pedido').value);
+    const fechaVencimiento = new Date(document.getElementById('txt_fecha_vencimiento').value);
+
+    if (fechaVencimiento < fechaPedido) {
+      alert("La Fecha de Vencimiento no puede ser anterior a la Fecha de Pedido.");
+      return false;
+    }
+    return true;
+  }
+
   document.getElementById('cbo_pedido').addEventListener('change', function () {
     const pedidoId = this.value;
 
@@ -178,6 +188,10 @@ Formulario Presupuesto Proveedor
   });
 
   document.getElementById('btn_registrar_pedido').addEventListener('click', function () {
+    if (!validarFechas()) {
+      return; // Si la validación falla, no continuar con el registro
+    }
+
     const productos = [];
     const rows = document.querySelectorAll('#productos-table-body tr');
 
