--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -116,8 +116,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item text-wrap" href="{{ url_for('pdcmod.pedidos_index') }}">Registrar pedido de compras</a>
                         <a class="collapse-item text-wrap" href="{{ url_for('pdpmod.presupuestos_index') }}">Registrar presupuesto de proveedor</a>
-                        <a class="collapse-item text-wrap" href="">Proceso 3</a>
-                        <a class="collapse-item" href="">Proceso 4</a>
+                        <a class="collapse-item text-wrap" href="{{ url_for('odcmod.ordenes_index') }}">Orden de Compra</a>
                     </div>
                 </div>
             </li>
