--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -224,7 +224,7 @@
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">Al hacer click en el botón Logout se cerrará su seción. esta seguro? </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                     <a class="btn btn-primary" href="{{ url_for('login.logout') }}">Logout</a>
